--- a/Calculator_39/src/main/res/layout/activity_main.xml
+++ b/Calculator_39/src/main/res/layout/activity_main.xml
@@ -7,50 +7,99 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/clrButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="CLR"
-        app:layout_constraintStart_toEndOf="@+id/ansButton"
-        tools:layout_editor_absoluteY="435dp" />
-
-    <Button
-        android:id="@+id/ansButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/button7"
+        android:layout_width="76sp"
+        android:layout_height="48dp"
         android:layout_marginStart="4dp"
-        android:text="Ans"
+        android:layout_marginTop="104dp"
+        android:text="7"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="435dp" />
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
 
     <Button
-        android:id="@+id/delButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Del"
+        android:id="@+id/plusButton"
+        android:layout_width="76dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="104dp"
+        android:text="+"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/delButton"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="76sp"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="104dp"
+        android:text="8"
+        app:layout_constraintStart_toEndOf="@+id/ansButton"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="76dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="104dp"
+        android:text="9"
         app:layout_constraintStart_toEndOf="@+id/clrButton"
-        tools:layout_editor_absoluteY="435dp" />
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
+        android:id="@+id/clrButton"
+        android:layout_width="76sp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="44dp"
+        android:text="@string/clr"
+        app:layout_constraintStart_toEndOf="@+id/ansButton"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
 
     <Button
         android:id="@+id/equalButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="4dp"
-        android:text="="
+        android:layout_width="76dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="44dp"
+        android:text="@string/eqal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/delButton"
-        tools:layout_editor_absoluteY="435dp" />
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
+        android:id="@+id/delButton"
+        android:layout_width="76dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="44dp"
+        android:text="@string/del"
+        app:layout_constraintStart_toEndOf="@+id/clrButton"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
+        android:id="@+id/ansButton"
+        android:layout_width="76sp"
+        android:layout_height="48dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="44dp"
+        android:text="@string/ans"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
 
     <TextView
         android:id="@+id/resultContainer"
         android:layout_width="352dp"
-        android:layout_height="168dp"
+        android:layout_height="153dp"
         android:layout_marginTop="40dp"
-        android:background="#DA000000"
+        android:background="#3F51B5"
+        android:text="@string/result"
+        android:textAlignment="gravity"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
