--- a/Calculator_39/src/main/res/layout/activity_main.xml
+++ b/Calculator_39/src/main/res/layout/activity_main.xml
@@ -7,6 +7,48 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/button4"
+        android:layout_width="76sp"
+        android:layout_height="48dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="172dp"
+        android:text="4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
+        android:id="@+id/minusButton"
+        android:layout_width="76dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="172dp"
+        android:text="-"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/delButton"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="76sp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="172dp"
+        android:text="5"
+        app:layout_constraintStart_toEndOf="@+id/ansButton"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="76dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="172dp"
+        android:text="6"
+        app:layout_constraintStart_toEndOf="@+id/clrButton"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
         android:id="@+id/button7"
         android:layout_width="76sp"
         android:layout_height="48dp"
