--- a/Calculator_39/src/main/res/layout/activity_main.xml
+++ b/Calculator_39/src/main/res/layout/activity_main.xml
@@ -7,6 +7,48 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/button1"
+        android:layout_width="76sp"
+        android:layout_height="48dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="236dp"
+        android:text="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="76sp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="236dp"
+        android:text="2"
+        app:layout_constraintStart_toEndOf="@+id/ansButton"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="76dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="236dp"
+        android:text="3"
+        app:layout_constraintStart_toEndOf="@+id/clrButton"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
+        android:id="@+id/multiplyButton3"
+        android:layout_width="76dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="236dp"
+        android:text="*"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/delButton"
+        app:layout_constraintTop_toBottomOf="@+id/resultContainer" />
+
+    <Button
         android:id="@+id/button4"
         android:layout_width="76sp"
         android:layout_height="48dp"
